--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'org.jetbrains:annotations:15.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -68,6 +69,5 @@ dependencies {
     // 구글 맵 현재 위치
     implementation 'com.google.android.material:material:1.4.0-alpha02'
 
-    //슬라이딩 페이지
-    //implementation 'com.sothree.slidinguppanel:library:3.4.0'
+
 }
