--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:name=".CaApplication"
@@ -18,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kuime.NoActionBar">
-        <activity android:name=".activity.ActivityReserveEnd"></activity>
+        <activity android:name=".activity.ActivityMyPage"></activity>
+        <activity android:name=".activity.ActivityReserveEnd" />
         <activity android:name=".activity.ActivityReserveMin" />
         <activity android:name=".activity.ActivityReserveTime" />
         <activity android:name=".activity.ActivityReserveService" />
