--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -68,6 +68,9 @@ dependencies {
 
     // 구글 맵 현재 위치
     implementation 'com.google.android.material:material:1.4.0-alpha02'
+
+    //프로그래스마
+    implementation 'com.dinuscxj:circleprogressbar:1.3.6'
 
 
 }
