--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:name=".CaApplication"
         android:allowBackup="true"
@@ -20,7 +19,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kuime.NoActionBar">
-        <activity android:name=".activity.ActivityMyPage"></activity>
+        <activity android:name=".activity.ActivityChargeHistory"></activity>
+        <activity android:name=".activity.ActivityCharge" />
+        <activity android:name=".activity.ActivityCard" />
+        <activity android:name=".activity.ActivityCar" />
+        <activity android:name=".activity.ActivityPoint" />
+        <activity android:name=".activity.ActivityMyPage" />
         <activity android:name=".activity.ActivityReserveEnd" />
         <activity android:name=".activity.ActivityReserveMin" />
         <activity android:name=".activity.ActivityReserveTime" />
